feat: handle error messages better
