# models/http_error.go
@@ -1,0 +1,120 @@
+// Code generated by Microsoft Kiota - DO NOT EDIT.
+// Changes may cause incorrect behavior and will be lost if the code is regenerated.
+
+package models
+
+import (
+	i2ae4187f7daee263371cb1c977df639813ab50ffa529013b7437480d1ec0158f "github.com/microsoft/kiota-abstractions-go"
+	i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91 "github.com/microsoft/kiota-abstractions-go/serialization"
+)
+
+type HttpError struct {
+    i2ae4187f7daee263371cb1c977df639813ab50ffa529013b7437480d1ec0158f.ApiError
+    // Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+    additionalData map[string]any
+    // The cedana_error_code property
+    cedana_error_code *int32
+    // The message property
+    message *string
+}
+// NewHttpError instantiates a new HttpError and sets the default values.
+func NewHttpError()(*HttpError) {
+    m := &HttpError{
+        ApiError: *i2ae4187f7daee263371cb1c977df639813ab50ffa529013b7437480d1ec0158f.NewApiError(),
+    }
+    m.SetAdditionalData(make(map[string]any))
+    return m
+}
+// CreateHttpErrorFromDiscriminatorValue creates a new instance of the appropriate class based on discriminator value
+// returns a Parsable when successful
+func CreateHttpErrorFromDiscriminatorValue(parseNode i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.Parsable, error) {
+    return NewHttpError(), nil
+}
+// Error the primary error message.
+// returns a string when successful
+func (m *HttpError) Error()(string) {
+    return m.ApiError.Error()
+}
+// GetAdditionalData gets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+// returns a map[string]any when successful
+func (m *HttpError) GetAdditionalData()(map[string]any) {
+    return m.additionalData
+}
+// GetCedanaErrorCode gets the cedana_error_code property value. The cedana_error_code property
+// returns a *int32 when successful
+func (m *HttpError) GetCedanaErrorCode()(*int32) {
+    return m.cedana_error_code
+}
+// GetFieldDeserializers the deserialization information for the current model
+// returns a map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error) when successful
+func (m *HttpError) GetFieldDeserializers()(map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error)) {
+    res := make(map[string]func(i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode)(error))
+    res["cedana_error_code"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetInt32Value()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetCedanaErrorCode(val)
+        }
+        return nil
+    }
+    res["message"] = func (n i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.ParseNode) error {
+        val, err := n.GetStringValue()
+        if err != nil {
+            return err
+        }
+        if val != nil {
+            m.SetMessage(val)
+        }
+        return nil
+    }
+    return res
+}
+// GetMessage gets the message property value. The message property
+// returns a *string when successful
+func (m *HttpError) GetMessage()(*string) {
+    return m.message
+}
+// Serialize serializes information the current object
+func (m *HttpError) Serialize(writer i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.SerializationWriter)(error) {
+    {
+        err := writer.WriteInt32Value("cedana_error_code", m.GetCedanaErrorCode())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteStringValue("message", m.GetMessage())
+        if err != nil {
+            return err
+        }
+    }
+    {
+        err := writer.WriteAdditionalData(m.GetAdditionalData())
+        if err != nil {
+            return err
+        }
+    }
+    return nil
+}
+// SetAdditionalData sets the AdditionalData property value. Stores additional data not described in the OpenAPI description found when deserializing. Can be used for serialization as well.
+func (m *HttpError) SetAdditionalData(value map[string]any)() {
+    m.additionalData = value
+}
+// SetCedanaErrorCode sets the cedana_error_code property value. The cedana_error_code property
+func (m *HttpError) SetCedanaErrorCode(value *int32)() {
+    m.cedana_error_code = value
+}
+// SetMessage sets the message property value. The message property
+func (m *HttpError) SetMessage(value *string)() {
+    m.message = value
+}
+type HttpErrorable interface {
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.AdditionalDataHolder
+    i878a80d2330e89d26896388a3f487eef27b0a0e6c010c493bf80be1452208f91.Parsable
+    GetCedanaErrorCode()(*int32)
+    GetMessage()(*string)
+    SetCedanaErrorCode(value *int32)()
+    SetMessage(value *string)()
+}
